fix(`Deawer`): fix position

--- a/app/components/Header/Drawer/Drawer.module.css
+++ b/app/components/Header/Drawer/Drawer.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     z-index: 3;
     top: 0;
-    left: -100vw;
+    left: -100%;
     background-color: var(--surface-white);
     width: 90vw;
     height: 100vh;
