--- a/app/components/shared/Drawer/Drawer.module.css
+++ b/app/components/shared/Drawer/Drawer.module.css
@@ -6,12 +6,23 @@
     background-color: var(--surface-white);
     width: 90vw;
     height: 100vh;
-    transition: left .3s;
+    transition: top .3s, left .3s;
     border-radius: 0 var(--surface-radius-1) var(--surface-radius-1) 0;
+}
+
+.Drawer.Down{
+    top: 100%;
+    left: 0;
+    width: 100vw;
+    height: 95vh;
 }
 
 .Drawer.Open {
     left: 0;
+}
+
+.Drawer.Down.Open{
+    top: 5vh;
 }
 
 .Overlay {
@@ -42,8 +53,4 @@
     border-bottom: 1px solid var(--surface-brand);
     padding-bottom: var(--spacing-5);
     margin-bottom: var(--spacing-8);
-}
-
-.Item {
-
 }
