--- a/app/components/shared/Button/Button.module.css
+++ b/app/components/shared/Button/Button.module.css
@@ -14,3 +14,9 @@
 .Button span{
     margin: 0px var(--spacing-4);
 }
+
+.Button.Round {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+}
