--- a/app/components/shared/Card/Card.module.css
+++ b/app/components/shared/Card/Card.module.css
@@ -2,7 +2,7 @@
     border: 1px solid var(--surface-gray);
     border-radius: var(--surface-radius-1);
     overflow: hidden;
-    width: 180px;
+    width: 100%;
 }
 
 .Header {
